[package]
name = "todo-actix-api-explorers"
description = "Simple actix-web todo with in-memory database example api and utoipa Swagger UI, Redoc, Rapidoc"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
  "Example <example@example.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
futures = "0.3"
webbrowser = "0.8.11"

# 3 utoipa API Explorers crates
utoipa = { version = "3.4.4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "0.1.0", features = ["actix-web"] }
